Modificamos y agregamos unas cosas nuevas

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Est es un sitio web con github pages</h1>
-	<p>y fue creado para practicar y mucho amor</p>
+<p>Y este fue creado para practicar GitHubPages y ademas <br> hecho con mucho amor</p><br><br>
+<h4>Esto se esta poniendo bueno</h4>
